# deepflow

./: .claude-design-doc.json  .gitignore  AI_TRANSFORMATION_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  DEEPFLOW_BUGS_AND_FIXES.md  FUTURE_ENHANCEMENTS.md  INTEGRATION_GUIDE.md  LICENSE  MANIFEST.in  MCP_INTEGRATION.md  MCP_INTEGRATION_GUIDE.md  NEXT_STEPS.md  NPCGPT_dependency_graph_ai_aware.html  PRIORITY2_FEATURES.md  PRIORITY3_AI_SESSION_INTELLIGENCE.md  README.md  SESSION_LOG_PRIORITY_3_COMPLETION.md  demo_file_organization.py  demo_priority2_features.py  demo_priority3_features.py  demo_priority5_features.py  demo_realtime_intelligence.py  demo_requirements_management_ascii.py  pyproject.toml  requirements.txt  setup.py  start_deepflow_mcp.bat  test_mermaid.html  test_mermaid.mmd
.ai-sessions/: report_791f693d.md  session_791f693d.json  session_d2fcca34.json
.github/workflows/: ci.yml  ci.yml.disabled  docs.yml  release.yml  release.yml.disabled  simple-ci.yml
deepflow/: __init__.py  smart_refactoring_engine.py  tools.py  unicode_cleanup.py  workflow_orchestrator.py
deepflow/mcp/: __init__.py  __main__.py  error_handler.py  realtime_intelligence.py  server.py
demos/: demo_priority2_features.py  demo_priority4_features.py  demo_requirements_management.py  test_realtime_demo.py
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  DEPENDENCY_MAP.md  MCP_TROUBLESHOOTING.md  README.md
docs/api/: API_DOCUMENTATION.md
docs/archive/: SESSION_LOG_PRIORITY_1_2_COMPLETION.md
docs/design-docs/: README.md
docs/design-docs/completed/: AI_TRANSFORMATION_SUMMARY.md  PRIORITY2_FEATURES.md  PRIORITY3_AI_SESSION_INTELLIGENCE.md
docs/design-docs/drafts/: _TEMPLATE.md  manage-design-docs.py
docs/development/: BUG_REPORT_MCP_LOGGING_ISSUE.md  CHANGE_IMPACT_CHECKLIST.md  DEEPFLOW_BUGS_AND_FIXES.md  UNICODE_HANDLING_SPEC.md  project_metrics.json
docs/planning/: FEATURE_BACKLOG.md
docs/user-guides/: INTEGRATION_GUIDE.md  MCP_INTEGRATION_GUIDE.md  MCP_QUICK_START.md
examples/: mcp_client_examples.py
examples/integration/: ci_cd_integration.yml
examples/workflows/: claude_code_development.md
output/analysis/: bandit-report-fixed.json  bandit-report.json
output/reports/: DEEPFLOW_SELF_ANALYSIS_REPORT.md  FILE_ORGANIZATION_SUMMARY.md  IMPLEMENTATION_COMPLETION_REPORT.md
output/visualizations/: NPCGPT_dependency_graph_ai_aware.html  NPCGPT_dependency_graph_ai_aware.mmd  deepflow_drag_enabled.html  deepflow_improved_visualization.html  deepflow_self_analysis.html  dependency_graph.html  dependency_graph_no_tests.html  dependency_graph_tests_only.html
templates/: CHANGE_IMPACT_CHECKLIST.md  DEPENDENCY_MAP_TEMPLATE.md  dependency_map_template.md
test_docs/: COMPREHENSIVE_TEST_PLAN.md  DEPENDENCY_MAP.md
tests/: README.md  __init__.py  conftest.py  mcp_client_compatibility_test.py  test_fallbacks_comprehensive.py  test_runner.py
tests/integration/: __init__.py  test_cli_commands.py  test_cross_platform.py  test_e2e_workflows.py  test_live_file_monitoring_comprehensive.py  test_optional_dependencies.py  test_package_imports.py  test_pattern_detection_systems_comprehensive.py
tests/mcp/: __init__.py  test_mcp_entry_points.py  test_mcp_fallbacks.py  test_mcp_server.py  test_mcp_tools.py  test_priority2_features.py  test_priority3_features.py  test_priority4_features.py  test_priority5_features.py  test_realtime_intelligence.py
tests/performance/: test_performance_benchmarks.py  test_stress_scenarios.py
tests/security/: test_security_validation_comprehensive.py
tests/unit/: __init__.py  test_code_analyzer.py  test_code_quality_comprehensive.py  test_code_quality_simple.py  test_dependency_analysis_comprehensive.py  test_dependency_visualizer.py  test_doc_generator.py  test_documentation_generation_comprehensive.py  test_documentation_generation_simple.py  test_error_handling_and_recovery_comprehensive.py  test_file_organization.py  test_mcp_comprehensive.py  test_mcp_protocol_comprehensive.py  test_requirements_management.py  test_smart_refactoring_engine.py  test_tools_import.py  test_workflow_orchestrator.py
tools/: ai_session_tracker.py  ci_cd_integrator.py  code_analyzer.py  dependency_visualizer.py  doc_generator.py  mcp_test_client.py  monitoring_dashboard.py  pre_commit_validator.py  test_mcp_clients.py
